commit index.html and style.css files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Image Editor</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
@@ -22,7 +22,7 @@
           <div class="filter">
             <label class="title">Filters</label>
             <div class="options">
-              <button>Brightness</button>
+              <button class="active">Brightness</button>
               <button>Saturation</button>
               <button>Inversion</button>
               <button>Grayscale</button>
