--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="container disable">
       <h2>Simple Image Editor</h2>
       <div class="wrapper">
         <div class="editor-panel">
           <div class="filter">
             <label class="title">Filters</label>
             <div class="options">
-              <button class="active">Brightness</button>
-              <button>Saturation</button>
-              <button>Inversion</button>
-              <button>Grayscale</button>
+              <button id="brightness" class="active">Brightness</button>
+              <button id="saturation">Saturation</button>
+              <button id="inversion">Inversion</button>
+              <button id="grayscale">Grayscale</button>
             </div>
             <div class="slider">
               <div class="filter-info">
@@ -38,10 +38,16 @@
           <div class="rotate">
             <label class="title">Rotate & Flip</label>
             <div class="options">
-              <button><i class="fa-solid fa-rotate-left"></i></button>
-              <button><i class="fa-solid fa-rotate-right"></i></button>
-              <button><i class="fa-solid fa-arrow-down"></i></button>
-              <button><i class="fa-solid fa-arrow-up"></i></button>
+              <button id="left"><i class="fa-solid fa-rotate-left"></i></button>
+              <button id="right">
+                <i class="fa-solid fa-rotate-right"></i>
+              </button>
+              <button id="vertical">
+                <i class="fa-solid fa-arrow-down"></i>
+              </button>
+              <button id="horizontal">
+                <i class="fa-solid fa-arrow-up"></i>
+              </button>
             </div>
           </div>
         </div>
@@ -52,10 +58,13 @@
       <div class="controls">
         <button class="reset-filter">Reset Filters</button>
         <div class="row">
+          <input type="file" class="file-input" accept="image/*" hidden />
           <button class="choose-img">Choose Image</button>
           <button class="save-img">Save Image</button>
         </div>
       </div>
     </div>
+
+    <script src="./script.js" defer></script>
   </body>
 </html>
